# hiprtc-example

./: .clang-format  CMakeLists.txt  README.md
include/: get_kernel.hpp  kernel.hpp  utility.hpp
src/: CMakeLists.txt  client.cpp  get_kernel.cpp  kernel.cu  utility.cpp
